<resources>
    <string name="app_name">SIRAM</string>
    <string name="icon_add_grade">icon add nilai</string>
    <string name="ki_spiritual">KI - 1 Spiritual</string>
    <string name="ki_sikapsosial">KI - 2 Sikap Sosial</string>
    <string name="ki_pengetahuan">KI - 3 Pengetahuan</string>
    <string name="ki_keterampilan">KI - 4 Keterampilan</string>
    <string name="see_all">lihat semua</string>
    <string name="datauser">Data User</string>
    <string name="datasiswa">Data Siswa</string>
    <string name="datamapel">Data Mapel</string>
    <string name="name_siswa">Nama Siswa</string>
    <string name="nama_mapel">Nama Mapel</string>
    <string name="nilai_harian">Nilai Harian</string>
    <string name="nilai_uts">Nilai UTS</string>
    <string name="nilai_uas">Nilai UAS</string>
    <string name="nilai_akhir_kd">Nilai Akhir KD</string>
    <string name="nilai_pengetahuan">Nilai Pengetahuan</string>
    <string name="nilai_keterampialan">Nilai Keterampialan</string>
    <string name="nilai_sosial">Nilai Sosial</string>
    <string name="nilai_spiritual">Nilai Spiritual</string>
    <string name="penilaian_sikap_spritual">Penilaian Sikap Spiritual</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="penilaian">Penilaian</string>
    <string name="keterangan_nilai">Keterangan Nilai:</string>
    <string name="verygood">SB : Sangat Baik</string>
    <string name="good">B : Baik</string>
    <string name="notgood">PB : Perlu Bimbingan</string>
    <string name="ketaatan_beribadah">Ketaatan Beribadah</string>
    <string name="berprilaku_bersyukur">Berprilaku Bersyukur</string>
    <string name="berdoa">Berdoa</string>
    <string name="berprilaku_toleransi">Berprilaku Toleransi</string>
    <string name="tambah">Tambah</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="penilaian_sikap_sosial">Penilaian Sikap Sosial</string>
    <string name="disiplin">Disiplin</string>
    <string name="santun">Santun</string>
    <string name="percaya_diri">Percaya Diri</string>
    <string name="jujur">Jujur</string>
    <string name="peduli">Peduli</string>
    <string name="tanggung_jawab">Tanggung Jawab</string>
    <string name="belum_dinilai">Belum dinilai</string>
    <string name="name_kd">Name KD</string>
    <string name="_0">0</string>
    <string name="name_tema">Nama Tema</string>
    <string name="keterampilan">Keterampilan</string>
    <string name="nilai">Nilai</string>
    <string name="deskripsi_kd">Deskripsi Kd</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="desc_about">SIRAM adalah aplikasi raport online yang diperuntukan bagi guru untuk mengelola raport siswa sekolah dasar.</string>
    <string name="title_about">Tentang SIRAM</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu_app">Menu Aplikasi</string>
    <string name="desc_dashboard">Berfungsi untuk menampilkan informasi umum SIRAM</string>
    <string name="data_utama">Data Utama</string>
    <string name="dsc_datautama">Berfungsi untuk mengelola data siswa, user, dan menampilkan data mapel</string>
    <string name="input_nilai">Input Nilai</string>
    <string name="raport">Raport</string>
    <string name="desc_raport">Berfungsi dalam menampilkan raport siswa.</string>
    <string name="desc_inputdata">Berfungsi dalam melakukan proses input nilai spiritual, sikap sosial, pengetahuan dan keterampilan.</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="school_name">Nama Sekolah</string>
    <string name="school_address">Alamat Sekolah</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="kkm">KKM : 0</string>
    <string name="see_detail">lihat detail</string>
    <string name="name_user">Nama User</string>
    <string name="b">B</string>
    <string name="see_raport">lihat raport</string>
    <string name="nisn">NIS/NISN</string>
    <string name="ttl">Tempat/Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="religion">Agama</string>
    <string name="grade">Kelas</string>
    <string name="semester">Semester</string>
    <string name="year">Tahun Pelajaran</string>
    <string name="name_teacher">Nama Guru</string>
    <string name="kompetensi_dasar">A. Kompetensi Sikap</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_onboarding_one">SIRAM menawarkan kemudahan bagi guru dalam memberikan nilai kepada siswa dari mana saja melalaui smartphone</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="praktis">Praktis</string>
    <string name="terintegrasi">Terintegrasi</string>
    <string name="tv_desc_ob_second">SIRAM dapat diintegrasikan dengan website untuk memantau hasil raport siswa kapan saja</string>
    <string name="mulai">Mulai</string>
    <string name="ringan">Ringan</string>
    <string name="tv_desc_ob_third">SIRAM termasuk aplikasi yang ringan karena semua data raport disimpan pada server online</string>
    <string name="countuser">0 User</string>
    <string name="countmapel">0 Mapel</string>
    <string name="count_siswa">0 Siswa</string>
</resources>