<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inputnilai.nilaisikapspiritual.NilaiSpiritualActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_above="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">
        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8sp"
                android:text="@string/penilaian_sikap_spritual"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="4dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_deskripsi_nilai_spiritual"
                android:layout_width="match_parent"
                android:minHeight="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/tv_name_siswa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/nama_siswa"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/tv_desc_spiritual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/deskripsi"
                    android:textSize="16sp"
                    android:padding="4dp"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8sp"
                android:text="@string/penilaian"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="4dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/penilaian_spiritual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/keterangan_nilai"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:paddingLeft="17dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/verygood"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:paddingLeft="17dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/good"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:paddingLeft="17dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/notgood"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:paddingLeft="17dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/ketaatan_beribadah"
                        android:textColor="@color/nav_unselected"
                        android:textSize="18sp"
                        android:paddingLeft="17dp"/>

                    <Spinner
                        android:id="@+id/spinner_beribadah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="10dp"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/berprilaku_bersyukur"
                        android:textColor="@color/nav_unselected"
                        android:textSize="18sp"
                        android:paddingLeft="17dp"/>
                    <Spinner
                        android:id="@+id/spinner_bersyukur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="10dp"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/berdoa"
                        android:textColor="@color/nav_unselected"
                        android:textSize="18sp"
                        android:paddingLeft="17dp"/>
                    <Spinner
                        android:id="@+id/spinner_berdoa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="10dp"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/berprilaku_toleransi"
                        android:textColor="@color/nav_unselected"
                        android:textSize="18sp"
                        android:paddingLeft="17dp"/>
                    <Spinner
                        android:id="@+id/spinner_toleransi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="10dp"
                        android:padding="4dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btn_tambah"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="20dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="@color/nav_unselected"
                            android:paddingVertical="15dp"
                            android:text="@string/tambah"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            style="?android:attr/buttonBarButtonStyle" />

                        <Button
                            android:id="@+id/btn_update"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="20dp"
                            android:backgroundTint="@color/nav_unselected"
                            android:paddingVertical="15dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/update"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            style="?android:attr/buttonBarButtonStyle" />

                    </LinearLayout>
                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:backgroundTint="@color/nav_unselected"
                        android:paddingVertical="15dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/background"
        app:itemIconTint="@drawable/color_state"
        app:itemTextColor="@drawable/color_state"
        app:menu="@menu/menu_bottom_nav" />
</RelativeLayout>